force-app/main/default/objects/ARTraining__c/ARTraining__c.object-meta.xml
<CustomObject>
    <label>ARTraining</label>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTrainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>