force-app/main/default/objects/ARTraining__c/fields/ARCompany__c.field-meta.xml
<CustomField>
    <fullName>ARCompany__c</fullName>
    <label>ARCompany</label>
    <length>20</length>
    <type>Text</type>
</CustomField>