force-app/main/default/objects/ARTraining__c/fields/ARTool__c.field-meta.xml
<CustomField>
    <fullName>ARTool__c</fullName>
    <label>ARTool</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Codescan</fullName>
            </value>
            <value>
                <fullName>Vault</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>