force-app/main/default/objects/ARTraining__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1month</fullName>
            </value>
            <value>
                <fullName>3months</fullName>
            </value>
            <value>
                <fullName>6months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>