force-app/main/default/objects/ARTraining__c/recordTypes/AR_recordtype.recordType-meta.xml
<RecordType>
    <fullName>AR_recordtype</fullName>
    <active>true</active>
    <label>AR_recordtype</label>
</RecordType>