force-app/main/default/objects/ARTraining__c/validationRules/AR_valid.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_valid</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( ARCompany__c )</errorConditionFormula>
    <errorDisplayField>ARCompany__c</errorDisplayField>
    <errorMessage>Should not be empty</errorMessage>
</ValidationRule>