force-app/main/default/objects/ARTraining__c/listViews/AR_listview.listView-meta.xml
<ListView>
    <fullName>AR_listview</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ARCompany__c</field>
        <operation>equals</operation>
        <value>AutoRabit</value>
    </filters>
    <label>AR_listview</label>
</ListView>